Two lines if text overflows in buttons mobile view - fixes #2180

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -6588,4 +6588,8 @@ a > i {
 		float: none;
 		display: table-cell;
 	}
+
+	.linklevel1 {
+		white-space: normal;
+	}
 }
